# jpa_voice_piper

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DEPLOYMENT_COMPLETE.md  FINAL_SUMMARY.txt  README.md  STATUS.txt  SUMMARY_AND_NEXT_STEPS.md  TRAINING_FAILURE_REPORT.md  TRAINING_ON_WINDOWS_GPU.md  TRANSFER_PACKAGE_README.md  WINDOWS_QUICKSTART.md  create_transfer_package.sh  pyproject.toml  setup_windows.bat  test_model_correct.py  test_real_dataset_phrases.py  test_with_adjusted_length.py  train_windows.bat
.claude/agents/: architect-reviewer.md  audio-quality-guardian.md  dataset-engineer.md  phonetics-validator.md  product-designer.md  product-documenter.md  productmanager.md  test-guardian.md  training-coordinator.md
dataset/prepared/: metadata.csv  metadata_phonemes.csv  phoneme_map.json
docs/: DATASET_STATUS.md  JSUT_QUICKSTART.md  MPS_TRAINING_FIX.md  PRODUCT.md  USER_GUIDE.md  WINDOWS_WSL_SETUP.md
docs/plans/active/: PLAN-001-french-voice-dataset.md  plan_japanese_voice_training.md
docs/product/decisions/: ADR-001-japanese-voice-architecture.md  ADR-001-project-foundation-architecture.md  ADR-002-jsut-infrastructure-implementation.md  ADR-003-japanese-phonetization-implementation.md  ADR-004-piper-preprocessing-integration.md  ADR-005-piper-training-integration.md
docs/product/stories/: STORY-001-french-dataset-foundation.md  STORY-001-japanese-voice-jsut.md  STORY-002-jsut-corpus-infrastructure.md  STORY-003-japanese-phonetization.md  STORY-004-piper-preprocessing-integration.md  STORY-005-piper-training-integration.md
piper_voice/application/: phonemize_japanese_corpus.py  prepare_dataset.py  preprocess_japanese_dataset.py  train_japanese_voice.py
piper_voice/core/: entities.py  ports.py  value_objects.py
piper_voice/infrastructure/audio/: processor.py
piper_voice/infrastructure/filesystem/: jsut_loader.py  metadata_writer.py  safe_fs.py
piper_voice/infrastructure/phonetics/: hiragana_phonetizer.py  pykakasi_adapter.py  text_normalizer.py
piper_voice/infrastructure/piper/: audio_stats.py  checkpoint_manager.py  config_generator.py  hardware_detector.py  preprocessor_adapter.py  training_adapter.py
scripts/: bootstrap.sh  create_japanese_voice.sh  download_jsut.sh  phonemize_japanese.py  prepare_jsut_dataset.py  preprocess_piper.py  test.sh  train_japanese_voice.py  train_japanese_voice.sh  train_voice.py  validate_environment.py
tests/integration/: test_phonemize_jsut_corpus.py  test_prepare_dataset.py
tests/unit/: test_audio_processor.py  test_audio_stats_calculator.py  test_entities.py  test_hiragana_phonetizer.py  test_jsut_loader.py  test_metadata_writer.py  test_phoneme_map.py  test_phoneme_value_objects.py  test_phonemize_japanese_corpus.py  test_piper_config_generator.py  test_piper_preprocessor_adapter.py  test_preprocess_japanese_dataset.py  test_preprocessor_adapter.py  test_pykakasi_adapter.py  test_safe_filesystem.py  test_text_normalizer.py  test_training_config.py  test_value_objects.py
tests/validation/: .gitkeep
